objects/ssot__SalesOrderProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustedDeliveryTaxAmount__c</fullName>
        <label>Adjusted Delivery Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustedSalesOrderProductAmount__c</fullName>
        <label>Adjusted Sales Order Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AllocatedQuantityUOMId__c</fullName>
        <label>Allocated Quantity Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllocatedQuantity__c</fullName>
        <label>Allocated Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvailableQuantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BonusProductReasonType__c</fullName>
        <label>Bonus Product Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryTaxAmount__c</fullName>
        <label>Delivery Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountAmountCurrency__c</fullName>
        <label>Discount Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftOrderMessageText__c</fullName>
        <label>Gift Order Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftRecipientTelephoneNumber__c</fullName>
        <label>Gift Recipient Telephone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GrossUnitPriceAmount__c</fullName>
        <label>Gross Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HandlingCostAmountCurrency__c</fullName>
        <label>Handling Cost Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAutomaticallyRenewed__c</fullName>
        <label>Is Automatically Renewed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBonusProduct__c</fullName>
        <label>Is Bonus Product</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBundleRoot__c</fullName>
        <label>Is Bundle Root</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGift__c</fullName>
        <label>Is Gift</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsListedProduct__c</fullName>
        <label>Listed Product</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsOutOfStock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Out Of Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPromotionalProduct__c</fullName>
        <label>Promotional Product</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LineAdjustmentSubTotalAmount__c</fullName>
        <label>Line Adjustment SubTotal Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceAmountCurrency__c</fullName>
        <label>List Price Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceAmount__c</fullName>
        <label>List Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceQuantityUOMId__c</fullName>
        <label>List Price Quantity Unit of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceQuantityUOM__c</fullName>
        <label>[DoNotUse]ListPriceQuantityUnitofMeasure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceTermUOMId__c</fullName>
        <label>List Price Term Unit of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceTermUOM__c</fullName>
        <label>[DoNotUse]List Price Term Unit ofMeasure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderAdjustmentSubTotalAmount__c</fullName>
        <label>Order Adjustment SubTotal Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OrderManualAdjustmentSubTotalAmount__c</fullName>
        <label>Order Manual Adjustment SubTotal Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OrderProductNumber__c</fullName>
        <label>Order Product Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderedQuantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalOrderProductId__c</fullName>
        <label>Original Order Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PricebookEntryId__c</fullName>
        <label>Pricebook Entry</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductReturnQuantity__c</fullName>
        <label>ProductReturnQuantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PromisedDate__c</fullName>
        <label>Promised Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProvisioningDate__c</fullName>
        <label>Provisioning Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityFulfilled__c</fullName>
        <label>Quantity Fulfilled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityOrderedUOMId__c</fullName>
        <label>Quantity Ordered Unit Of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityOrderedUOM__c</fullName>
        <label>[DoNotUse]Quantity Ordered UnitOfMeasure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuoteLineItemId__c</fullName>
        <label>Quote Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendedQuantity__c</fullName>
        <label>Recommended Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurringPriceAmount__c</fullName>
        <label>Recurring Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedEndDate__c</fullName>
        <label>Requested End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedStartDate__c</fullName>
        <label>Requested Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SalesModelId__c</fullName>
        <label>Sales Model</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderDeliveryGroupId__c</fullName>
        <label>Sales Order Delivery Group</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductAdjustedTaxAmount__c</fullName>
        <label>Sales Order Product Adjusted Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductIdentifications__c</fullName>
        <label>SalesOrderProductIdentifications</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductNotes__c</fullName>
        <label>SalesOrderProductNotes relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductPriceAdjustments__c</fullName>
        <label>SalesOrderProductPriceAdjustments</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductReasonId__c</fullName>
        <label>Sales Order Product Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductRelatedProducts__c</fullName>
        <label>SalesOrderProductRelatedProducts</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductStatusId__c</fullName>
        <label>Sales Order Product Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductStatus__c</fullName>
        <label>[DoNotUse]Sales Order Product Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductSubType__c</fullName>
        <label>Sales Order Product Sub Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductTaxes__c</fullName>
        <label>SalesOrderProductTaxes relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductType__c</fullName>
        <label>Sales Order Product Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SegmentIndexId__c</fullName>
        <label>Segment Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SegmentIndexNumber__c</fullName>
        <label>Segment Index Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SellerAccountId__c</fullName>
        <label>Seller Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingCostAmountCurrency__c</fullName>
        <label>Shipping Cost Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingTaxAmountCurrency__c</fullName>
        <label>Shipping Tax Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecialUnitPriceAmount__c</fullName>
        <label>Special Unit Price Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SubscriptionRenewalMonthQuantity__c</fullName>
        <label>Subscription Renewal Month Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SubscriptionTermQuantity__c</fullName>
        <label>Subscription Term Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SubscriptionTermUnitId__c</fullName>
        <label>Subscription Term Unit of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubscriptionTermUnit__c</fullName>
        <label>[DoNotUse]Subscription TermUnitofMeasure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentTaxAmount__c</fullName>
        <label>Total Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDistributedAdjustmentAmount__c</fullName>
        <label>Total Distributed Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDistributedAdjustmentTaxAmount__c</fullName>
        <label>Total Distributed Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDistributedTaxAmount__c</fullName>
        <label>Total Distributed Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLineAdjustmentAmount__c</fullName>
        <label>Total Line Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLineAmount__c</fullName>
        <label>Total Line Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalListPriceAmount__c</fullName>
        <label>Total List Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalManualAdjustmentAmount__c</fullName>
        <label>Total Manual Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPriceAmount__c</fullName>
        <label>Total Price Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductTaxAmount__c</fullName>
        <label>Total Product Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRecurringPriceAmount__c</fullName>
        <label>Total Recurring Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUnitPriceAmount__c</fullName>
        <label>Total Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxAdjustmentAmount__c</fullName>
        <label>Total With Tax Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxAmount__c</fullName>
        <label>Total With Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxDistAdjustmentAmount__c</fullName>
        <label>Total With Tax Dist Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxLineAdjustmentAmount__c</fullName>
        <label>Total With Tax Line Adjsutment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxLineAmount__c</fullName>
        <label>Total With Tax Line Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmountCurrency__c</fullName>
        <label>Unit Price Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmount__c</fullName>
        <label>Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitTaxAmountCurrency__c</fullName>
        <label>Unit Tax Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitTaxAmount__c</fullName>
        <label>Unit Tax Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WithTaxAdjustedLineAmount__c</fullName>
        <label>With Tax Adjusted Line Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761152313_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_SalesOrderProduct_Sel_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_SalesOrderProduct_Sel_rel</relationshipLabel>
        <relationshipName>rel_1697761152313_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761155534_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_Id_map_SalesOrderProdu_rel</label>
        <referenceTo>ssot__BundleProduct__dlm</referenceTo>
        <relationshipLabel>BundleProduct_Id_map_SalesOrderProdu_rel</relationshipLabel>
        <relationshipName>rel_1697761155534_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761175181_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoodsProduct_Id_map_SalesOrderProduc_rel</label>
        <referenceTo>ssot__GoodsProduct__dlm</referenceTo>
        <relationshipLabel>GoodsProduct_Id_map_SalesOrderProduc_rel</relationshipLabel>
        <relationshipName>rel_1697761175181_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>